# hackaton_mapfre_icai

./: .gitignore  GUIA_HACKATON.md  README.md  pyproject.toml
backend/: caravan_model.py  main.py  model.py  requirements.txt  schemas.py
data/: README.md
frontend/: app.py
scripts/: download_coil2000.py
solution/backend/: caravan_model.py  main.py  model.py  requirements.txt  schemas.py
solution/frontend/: app.py  requirements.txt
