[project]
name = "hackaton-mapfre-icai"
version = "0.1.0"
description = "COIL 2000 backend (FastAPI) and frontend (Streamlit)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "scikit-learn==1.4.2",
    "joblib==1.3.2",
    "pydantic==2.7.1",
    "pandas>=2.0.0",
    "xgboost==2.1.1",
    "streamlit==1.39.0",
    "requests==2.32.3",
]

[tool.uv]
package = false
